--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,6 @@
             <artifactId>spring-hateoas</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-        </dependency>
-        <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <version>2.2.3</version>
@@ -84,6 +80,7 @@
                             <language>java</language>
                             <configOptions>
                                 <sourceFolder>src/gen/java/main</sourceFolder>
+                                <ta>src/gen/java/main</ta>
                             </configOptions>
                         </configuration>
                     </execution>
