--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,9 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.openapitools</groupId>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <!-- RELEASE_VERSION -->
-                <version>5.3.0</version>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-codegen-maven-plugin</artifactId>
+                <version>3.0.0-rc0</version>
                 <!-- /RELEASE_VERSION -->
                 <executions>
                     <execution>
